Added example weekly command

--- a/.env-example
+++ b/.env-example
@@ -2,3 +2,7 @@
 DISCORD_LOGIN=
 # Your Giphy API key (https://developers.giphy.com/dashboard/)
 GIPHY_KEY=
+# Your Bungie API key (https://www.bungie.net/en/Application/)
+BUNGIE_KEY=
+# Your Bungie Group ID (https://www.bungie.net/en/ClanV2/MyClan)
+BUNGIE_GROUP=
