--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"start": "npm-run-all build server",
 		"watch:build": "tsc -p . --watch",
 		"watch:server": "nodemon ./bin/index.js --watch ./bin",
-		"watch:start": "npm run build && npm-run-all --parallel watch:build watch:server"
+		"watch:start": "npm run build && npm-run-all --parallel watch:build watch:server",
+		"generate:definitions": "ts-node tools/generators/definitions.ts"
 	},
 	"dependencies": {
 		"discord.js": "^11.2.1",
